# pune-house-price-prediction

./: Ideas.txt  README.md  pyproject.toml
Stationary/: DataExtraction.py  EDA.ipynb  PHPP.drawio  PHPPold.drawio  cleaning.ipynb  webscraping.ipynb
Stationary/Data/: idsAndUrls.csv  test.csv  test_imputed.csv  train_imputed.csv  validation.csv
Stationary/Iteration_1/: DataExtraction.py  EDA.ipynb  FeatureSelection.ipynb  FinalPipeline.ipynb  ModelTrainingAndSelection.ipynb  PreliminaryCleaning.ipynb  localityNameMerging.ipynb  webscraping.ipynb
Stationary/Iteration_1/LocalitiesMerge/: localityNameMerge_v1.json  localityNameMerge_v2.json  localityNameMerge_v3.json  localityNameMerge_v4.json  localityNameMerge_v5.json
Stationary/Iteration_1/Reports/: FeatureSelectionOnTrainingDataV1.html
Stationary/Iteration_1/Results/: BestHyperparameters.txt  cv_scores.csv
Stationary/Iteration_2/: FinalPipeline.ipynb  ModelTrainingAndSelection.ipynb  README.md  Recommendations.ipynb
Stationary/Iteration_2/PipelinesAndModels/: final_preprocessor_pipeline_iteration_2.pkl  lgb_model_iteration_2.pkl  nearest_neighbors_model.joblib  options_iteration_2.json  (+1 more)
Stationary/Iteration_3/: DataExtraction.py  FinalPipeline.ipynb  ModelTrainingAndSelection.ipynb  PreliminaryCleaning.ipynb  README.md  Recommendations.ipynb  webscraping.ipynb
Website/About/: FutureEnhancements.md
Website/Backend/: .dockerignore  docker-compose.yml  dockerfile  main.py  pyproject.toml  recommend.py  requirements.txt
Website/Frontend/: astro.config.mjs  package.json  pnpm-lock.yaml  vercel.json
(+78 files in other folders)
