[project]
name = "punehousepriceprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.5",
    "fastapi>=0.115.11",
    "lightgbm>=4.6.0",
    "missingno>=0.5.2",
    "numpy==1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "selenium>=4.30.0",
    "shap>=0.47.0",
    "shortuuid>=1.0.13",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.4",
    "ydata-profiling>=4.12.2",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
]

[tool.uv.workspace]
members = ["Website/Backend"]
